# eratosthenes-server

./: Cargo.toml  Dockerfile  README.md  locations.example.ndjson
.github/workflows/: aws.yml  ci.yml  ecs-task-definition.json
monitoring/grafana/: EratosthenesDashboardConfig.json
monitoring/quickwit/: client_sent_ws_messages.yaml  http_requests.yaml  sockets_counts.yaml
src/: handlers.rs  main.rs  map_locations.rs  message_types.rs  models.rs  storage.rs  street_view_locations.txt  user_descriptions.rs  user_id.rs
src/app_context/: mod.rs
src/auth/: endpoints.rs  extractors.rs  handlers.rs  mod.rs  passcode.rs  responses.rs  tests.rs  user_id.rs
src/cli/: mod.rs  tests.rs
src/health/: endpoints.rs  handlers.rs  mod.rs  responses.rs  tests.rs
src/http/: config.rs  cors.rs  middleware.rs  mod.rs  query_params.rs  router.rs  tests.rs
src/logging/: consts.rs  mod.rs  quickwit.rs
src/map/: locations.rs  mod.rs  models.rs
src/map_locations/: consts.rs  locations.rs  mod.rs  models.rs
src/query_params/: mod.rs
src/rooms/: bot_messages.rs  consts.rs  message_types.rs  mod.rs  models.rs
src/rooms/endpoints/: host_actions.rs  mod.rs  permissions.rs  player_actions.rs  room.rs  ws.rs
src/rooms/handlers/: host_actions.rs  http.rs  mod.rs  permissions.rs  player_actions.rs  requests.rs  room.rs  ws.rs
src/rooms/services/: http.rs  mod.rs  responses.rs
src/storage/: consts.rs  interface.rs  mod.rs  rooms.rs  sockets.rs
src/uploads/: consts.rs  env.rs  handlers.rs  img.rs  mod.rs  requests.rs  responses.rs  s3.rs
src/users/: consts.rs  descriptions.rs  handlers.rs  mod.rs  models.rs  responses.rs
