[package]
name = "eratosthenes-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
clap = { version = "4.5.11", features = ["derive"] }
futures-util = "0.3.30"
hmac = "0.12.1"
jwt = "0.16.0"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
serde_unit_struct = "0.1.3"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "time"] }
tracing_quickwit = { git = "https://github.com/v-spassky/tracing_quickwit", version = "0.1.0" }
unicode-segmentation = "1.11.0"
url = "2.5.2"
warp = "0.3.6"
