[package]
name = "eratosthenes-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
aws-config = "1.5.13"
aws-sdk-s3 = "1.68.0"
axum = { version = "0.7.9", features = ["macros", "multipart", "ws"] }
axum-client-ip = "0.7.0"
axum-test = "16.4.1"
clap = { version = "4.5.11", features = ["derive"] }
futures-util = "0.3.30"
hmac = "0.12.1"
http = "1.2.0"
image = "0.25.5"
jwt = "0.16.0"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
serde_unit_struct = "0.1.3"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "time"] }
tracing_quickwit = { git = "https://github.com/v-spassky/tracing_quickwit", version = "0.1.0" }
unicode-segmentation = "1.11.0"
url = "2.5.2"
